// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`linux concurrent 1`] = `
{
  "linux": [
    {
      "arch": "armv7l",
      "file": "TestApp-1.1.0-armv7l.AppImage",
      "updateInfo": {
        "blockMapSize": "@blockMapSize",
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "arch": "x64",
      "file": "TestApp-1.1.0.AppImage",
      "updateInfo": {
        "blockMapSize": "@blockMapSize",
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "arch": "x64",
      "file": "TestApp_1.1.0_amd64.deb",
    },
    {
      "arch": "armv7l",
      "file": "TestApp_1.1.0_armv7l.deb",
    },
    {
      "arch": "armv7l",
      "file": "TestApp-1.1.0.armv7l.rpm",
    },
    {
      "arch": "x64",
      "file": "TestApp-1.1.0.x86_64.rpm",
    },
  ],
}
`;

exports[`linux concurrent 2`] = `
[
  "/",
  "/opt/",
  "/usr/",
  "/opt/TestApp/",
  "/opt/TestApp/chrome-sandbox",
  "/opt/TestApp/chrome_100_percent.pak",
  "/opt/TestApp/chrome_200_percent.pak",
  "/opt/TestApp/chrome_crashpad_handler",
  "/opt/TestApp/icudtl.dat",
  "/opt/TestApp/libEGL.so",
  "/opt/TestApp/libffmpeg.so",
  "/opt/TestApp/libGLESv2.so",
  "/opt/TestApp/libvk_swiftshader.so",
  "/opt/TestApp/libvulkan.so.1",
  "/opt/TestApp/LICENSE.electron.txt",
  "/opt/TestApp/LICENSES.chromium.html",
  "/opt/TestApp/resources.pak",
  "/opt/TestApp/snapshot_blob.bin",
  "/opt/TestApp/testapp",
  "/opt/TestApp/v8_context_snapshot.bin",
  "/opt/TestApp/vk_swiftshader_icd.json",
  "/usr/share/",
  "/opt/TestApp/resources/",
  "/opt/TestApp/resources/app.asar",
  "/opt/TestApp/resources/apparmor-profile",
  "/usr/share/applications/",
  "/usr/share/applications/testapp.desktop",
  "/usr/share/doc/",
  "/usr/share/icons/",
  "/usr/share/doc/testapp/",
  "/usr/share/doc/testapp/changelog.gz",
  "/usr/share/icons/hicolor/",
  "/usr/share/icons/hicolor/128x128/",
  "/usr/share/icons/hicolor/16x16/",
  "/usr/share/icons/hicolor/256x256/",
  "/usr/share/icons/hicolor/32x32/",
  "/usr/share/icons/hicolor/48x48/",
  "/usr/share/icons/hicolor/512x512/",
  "/usr/share/icons/hicolor/64x64/",
  "/usr/share/icons/hicolor/128x128/apps/",
  "/usr/share/icons/hicolor/128x128/apps/testapp.png",
  "/usr/share/icons/hicolor/16x16/apps/",
  "/usr/share/icons/hicolor/16x16/apps/testapp.png",
  "/usr/share/icons/hicolor/256x256/apps/",
  "/usr/share/icons/hicolor/256x256/apps/testapp.png",
  "/usr/share/icons/hicolor/32x32/apps/",
  "/usr/share/icons/hicolor/32x32/apps/testapp.png",
  "/usr/share/icons/hicolor/48x48/apps/",
  "/usr/share/icons/hicolor/48x48/apps/testapp.png",
  "/usr/share/icons/hicolor/512x512/apps/",
  "/usr/share/icons/hicolor/512x512/apps/testapp.png",
  "/usr/share/icons/hicolor/64x64/apps/",
  "/usr/share/icons/hicolor/64x64/apps/testapp.png",
]
`;

exports[`linux concurrent 3`] = `
{
  "Architecture": "amd64",
  "Depends": "libgtk-3-0, libnotify4, libnss3, libxss1, libxtst6, xdg-utils, libatspi2.0-0, libuuid1, libsecret-1-0",
  "Homepage": "http://foo.example.com",
  "License": "MIT",
  "Maintainer": "Foo Bar <foo@example.com>",
  "Package": "testapp",
  "Priority": "optional",
  "Recommends": "libappindicator3-1",
  "Section": "default",
  "Vendor": "Foo Bar <foo@example.com>",
}
`;

exports[`linux concurrent 4`] = `"Test Application (test quite “ #378)"`;

exports[`linux concurrent 5`] = `
[
  "/",
  "/opt/",
  "/usr/",
  "/opt/TestApp/",
  "/opt/TestApp/chrome-sandbox",
  "/opt/TestApp/chrome_100_percent.pak",
  "/opt/TestApp/chrome_200_percent.pak",
  "/opt/TestApp/chrome_crashpad_handler",
  "/opt/TestApp/icudtl.dat",
  "/opt/TestApp/libEGL.so",
  "/opt/TestApp/libffmpeg.so",
  "/opt/TestApp/libGLESv2.so",
  "/opt/TestApp/libvk_swiftshader.so",
  "/opt/TestApp/libvulkan.so.1",
  "/opt/TestApp/LICENSE.electron.txt",
  "/opt/TestApp/LICENSES.chromium.html",
  "/opt/TestApp/resources.pak",
  "/opt/TestApp/snapshot_blob.bin",
  "/opt/TestApp/testapp",
  "/opt/TestApp/v8_context_snapshot.bin",
  "/opt/TestApp/vk_swiftshader_icd.json",
  "/usr/share/",
  "/opt/TestApp/resources/",
  "/opt/TestApp/resources/app.asar",
  "/opt/TestApp/resources/apparmor-profile",
  "/usr/share/applications/",
  "/usr/share/applications/testapp.desktop",
  "/usr/share/doc/",
  "/usr/share/icons/",
  "/usr/share/doc/testapp/",
  "/usr/share/doc/testapp/changelog.gz",
  "/usr/share/icons/hicolor/",
  "/usr/share/icons/hicolor/128x128/",
  "/usr/share/icons/hicolor/16x16/",
  "/usr/share/icons/hicolor/256x256/",
  "/usr/share/icons/hicolor/32x32/",
  "/usr/share/icons/hicolor/48x48/",
  "/usr/share/icons/hicolor/512x512/",
  "/usr/share/icons/hicolor/64x64/",
  "/usr/share/icons/hicolor/128x128/apps/",
  "/usr/share/icons/hicolor/128x128/apps/testapp.png",
  "/usr/share/icons/hicolor/16x16/apps/",
  "/usr/share/icons/hicolor/16x16/apps/testapp.png",
  "/usr/share/icons/hicolor/256x256/apps/",
  "/usr/share/icons/hicolor/256x256/apps/testapp.png",
  "/usr/share/icons/hicolor/32x32/apps/",
  "/usr/share/icons/hicolor/32x32/apps/testapp.png",
  "/usr/share/icons/hicolor/48x48/apps/",
  "/usr/share/icons/hicolor/48x48/apps/testapp.png",
  "/usr/share/icons/hicolor/512x512/apps/",
  "/usr/share/icons/hicolor/512x512/apps/testapp.png",
  "/usr/share/icons/hicolor/64x64/apps/",
  "/usr/share/icons/hicolor/64x64/apps/testapp.png",
]
`;

exports[`linux concurrent 6`] = `
{
  "Architecture": "armhf",
  "Depends": "libgtk-3-0, libnotify4, libnss3, libxss1, libxtst6, xdg-utils, libatspi2.0-0, libuuid1, libsecret-1-0",
  "Homepage": "http://foo.example.com",
  "License": "MIT",
  "Maintainer": "Foo Bar <foo@example.com>",
  "Package": "testapp",
  "Priority": "optional",
  "Recommends": "libappindicator3-1",
  "Section": "default",
  "Vendor": "Foo Bar <foo@example.com>",
}
`;

exports[`linux concurrent 7`] = `"Test Application (test quite “ #378)"`;

exports[`mac concurrent 1`] = `
{
  "mac": [
    {
      "arch": "universal",
      "file": "TestApp-1.1.0-universal.dmg",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "TestApp-1.1.0-universal.dmg.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "arch": "x64",
      "file": "TestApp-1.1.0.dmg",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "TestApp-1.1.0.dmg.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "arch": "x64",
      "file": "TestApp-1.1.0-mac.zip",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "TestApp-1.1.0-mac.zip.blockmap",
      "safeArtifactName": "TestApp-1.1.0-mac.zip.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "arch": "universal",
      "file": "TestApp-1.1.0-universal-mac.zip",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "TestApp-1.1.0-universal-mac.zip.blockmap",
      "safeArtifactName": "TestApp-1.1.0-universal-mac.zip.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;

exports[`mac concurrent 2`] = `
{
  "CFBundleDisplayName": "TestApp",
  "CFBundleExecutable": "TestApp",
  "CFBundleIconFile": "icon.icns",
  "CFBundleIdentifier": "org.electron-builder.testApp",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "TestApp",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.1.0",
  "ElectronAsarIntegrity": {
    "Resources/app.asar": {
      "algorithm": "SHA256",
      "hash": "hash",
    },
  },
  "LSApplicationCategoryType": "your.app.category.type",
  "LSEnvironment": {
    "MallocNanoZone": "0",
  },
  "NSAppTransportSecurity": {},
  "NSBluetoothAlwaysUsageDescription": "This app needs access to Bluetooth",
  "NSBluetoothPeripheralUsageDescription": "This app needs access to Bluetooth",
  "NSHighResolutionCapable": true,
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`mac concurrent 3`] = `
{
  "CFBundleDisplayName": "TestApp",
  "CFBundleExecutable": "TestApp",
  "CFBundleIconFile": "icon.icns",
  "CFBundleIdentifier": "org.electron-builder.testApp",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "TestApp",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.1.0",
  "ElectronAsarIntegrity": {
    "Resources/app.asar": {
      "algorithm": "SHA256",
      "hash": "hash",
    },
  },
  "LSApplicationCategoryType": "your.app.category.type",
  "LSEnvironment": {
    "MallocNanoZone": "0",
  },
  "NSAppTransportSecurity": {},
  "NSBluetoothAlwaysUsageDescription": "This app needs access to Bluetooth",
  "NSBluetoothPeripheralUsageDescription": "This app needs access to Bluetooth",
  "NSHighResolutionCapable": true,
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`mac/win/linux concurrent 1`] = `
{
  "linux": [
    {
      "arch": "armv7l",
      "file": "TestApp-1.1.0-armv7l.AppImage",
      "updateInfo": {
        "blockMapSize": "@blockMapSize",
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "arch": "x64",
      "file": "TestApp-1.1.0.AppImage",
      "updateInfo": {
        "blockMapSize": "@blockMapSize",
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "arch": "x64",
      "file": "TestApp_1.1.0_amd64.deb",
    },
    {
      "arch": "armv7l",
      "file": "TestApp_1.1.0_armv7l.deb",
    },
    {
      "arch": "armv7l",
      "file": "TestApp-1.1.0.armv7l.rpm",
    },
    {
      "arch": "x64",
      "file": "TestApp-1.1.0.x86_64.rpm",
    },
  ],
  "mac": [
    {
      "arch": "universal",
      "file": "TestApp-1.1.0-universal.dmg",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "TestApp-1.1.0-universal.dmg.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "arch": "x64",
      "file": "TestApp-1.1.0.dmg",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "TestApp-1.1.0.dmg.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "arch": "x64",
      "file": "TestApp-1.1.0-mac.zip",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "TestApp-1.1.0-mac.zip.blockmap",
      "safeArtifactName": "TestApp-1.1.0-mac.zip.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "arch": "universal",
      "file": "TestApp-1.1.0-universal-mac.zip",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "TestApp-1.1.0-universal-mac.zip.blockmap",
      "safeArtifactName": "TestApp-1.1.0-universal-mac.zip.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
  "win": [
    {
      "file": "TestApp Setup 1.1.0.exe",
      "safeArtifactName": "TestApp-Setup-1.1.0.exe",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "TestApp Setup 1.1.0.exe.blockmap",
      "safeArtifactName": "TestApp-Setup-1.1.0.exe.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;

exports[`mac/win/linux concurrent 2`] = `
{
  "CFBundleDisplayName": "TestApp",
  "CFBundleExecutable": "TestApp",
  "CFBundleIconFile": "icon.icns",
  "CFBundleIdentifier": "org.electron-builder.testApp",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "TestApp",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.1.0",
  "ElectronAsarIntegrity": {
    "Resources/app.asar": {
      "algorithm": "SHA256",
      "hash": "hash",
    },
  },
  "LSApplicationCategoryType": "your.app.category.type",
  "LSEnvironment": {
    "MallocNanoZone": "0",
  },
  "NSAppTransportSecurity": {},
  "NSBluetoothAlwaysUsageDescription": "This app needs access to Bluetooth",
  "NSBluetoothPeripheralUsageDescription": "This app needs access to Bluetooth",
  "NSHighResolutionCapable": true,
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`mac/win/linux concurrent 3`] = `
{
  "CFBundleDisplayName": "TestApp",
  "CFBundleExecutable": "TestApp",
  "CFBundleIconFile": "icon.icns",
  "CFBundleIdentifier": "org.electron-builder.testApp",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "TestApp",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.1.0",
  "ElectronAsarIntegrity": {
    "Resources/app.asar": {
      "algorithm": "SHA256",
      "hash": "hash",
    },
  },
  "LSApplicationCategoryType": "your.app.category.type",
  "LSEnvironment": {
    "MallocNanoZone": "0",
  },
  "NSAppTransportSecurity": {},
  "NSBluetoothAlwaysUsageDescription": "This app needs access to Bluetooth",
  "NSBluetoothPeripheralUsageDescription": "This app needs access to Bluetooth",
  "NSHighResolutionCapable": true,
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`mac/win/linux concurrent 4`] = `
[
  "/",
  "/opt/",
  "/usr/",
  "/opt/TestApp/",
  "/opt/TestApp/chrome-sandbox",
  "/opt/TestApp/chrome_100_percent.pak",
  "/opt/TestApp/chrome_200_percent.pak",
  "/opt/TestApp/chrome_crashpad_handler",
  "/opt/TestApp/icudtl.dat",
  "/opt/TestApp/libEGL.so",
  "/opt/TestApp/libffmpeg.so",
  "/opt/TestApp/libGLESv2.so",
  "/opt/TestApp/libvk_swiftshader.so",
  "/opt/TestApp/libvulkan.so.1",
  "/opt/TestApp/LICENSE.electron.txt",
  "/opt/TestApp/LICENSES.chromium.html",
  "/opt/TestApp/resources.pak",
  "/opt/TestApp/snapshot_blob.bin",
  "/opt/TestApp/testapp",
  "/opt/TestApp/v8_context_snapshot.bin",
  "/opt/TestApp/vk_swiftshader_icd.json",
  "/usr/share/",
  "/opt/TestApp/resources/",
  "/opt/TestApp/resources/app.asar",
  "/opt/TestApp/resources/apparmor-profile",
  "/usr/share/applications/",
  "/usr/share/applications/testapp.desktop",
  "/usr/share/doc/",
  "/usr/share/icons/",
  "/usr/share/doc/testapp/",
  "/usr/share/doc/testapp/changelog.gz",
  "/usr/share/icons/hicolor/",
  "/usr/share/icons/hicolor/128x128/",
  "/usr/share/icons/hicolor/16x16/",
  "/usr/share/icons/hicolor/256x256/",
  "/usr/share/icons/hicolor/32x32/",
  "/usr/share/icons/hicolor/48x48/",
  "/usr/share/icons/hicolor/512x512/",
  "/usr/share/icons/hicolor/64x64/",
  "/usr/share/icons/hicolor/128x128/apps/",
  "/usr/share/icons/hicolor/128x128/apps/testapp.png",
  "/usr/share/icons/hicolor/16x16/apps/",
  "/usr/share/icons/hicolor/16x16/apps/testapp.png",
  "/usr/share/icons/hicolor/256x256/apps/",
  "/usr/share/icons/hicolor/256x256/apps/testapp.png",
  "/usr/share/icons/hicolor/32x32/apps/",
  "/usr/share/icons/hicolor/32x32/apps/testapp.png",
  "/usr/share/icons/hicolor/48x48/apps/",
  "/usr/share/icons/hicolor/48x48/apps/testapp.png",
  "/usr/share/icons/hicolor/512x512/apps/",
  "/usr/share/icons/hicolor/512x512/apps/testapp.png",
  "/usr/share/icons/hicolor/64x64/apps/",
  "/usr/share/icons/hicolor/64x64/apps/testapp.png",
]
`;

exports[`mac/win/linux concurrent 5`] = `
{
  "Architecture": "amd64",
  "Depends": "libgtk-3-0, libnotify4, libnss3, libxss1, libxtst6, xdg-utils, libatspi2.0-0, libuuid1, libsecret-1-0",
  "Homepage": "http://foo.example.com",
  "License": "MIT",
  "Maintainer": "Foo Bar <foo@example.com>",
  "Package": "testapp",
  "Priority": "optional",
  "Recommends": "libappindicator3-1",
  "Section": "default",
  "Vendor": "Foo Bar <foo@example.com>",
}
`;

exports[`mac/win/linux concurrent 6`] = `"Test Application (test quite “ #378)"`;

exports[`mac/win/linux concurrent 7`] = `
[
  "/",
  "/opt/",
  "/usr/",
  "/opt/TestApp/",
  "/opt/TestApp/chrome-sandbox",
  "/opt/TestApp/chrome_100_percent.pak",
  "/opt/TestApp/chrome_200_percent.pak",
  "/opt/TestApp/chrome_crashpad_handler",
  "/opt/TestApp/icudtl.dat",
  "/opt/TestApp/libEGL.so",
  "/opt/TestApp/libffmpeg.so",
  "/opt/TestApp/libGLESv2.so",
  "/opt/TestApp/libvk_swiftshader.so",
  "/opt/TestApp/libvulkan.so.1",
  "/opt/TestApp/LICENSE.electron.txt",
  "/opt/TestApp/LICENSES.chromium.html",
  "/opt/TestApp/resources.pak",
  "/opt/TestApp/snapshot_blob.bin",
  "/opt/TestApp/testapp",
  "/opt/TestApp/v8_context_snapshot.bin",
  "/opt/TestApp/vk_swiftshader_icd.json",
  "/usr/share/",
  "/opt/TestApp/resources/",
  "/opt/TestApp/resources/app.asar",
  "/opt/TestApp/resources/apparmor-profile",
  "/usr/share/applications/",
  "/usr/share/applications/testapp.desktop",
  "/usr/share/doc/",
  "/usr/share/icons/",
  "/usr/share/doc/testapp/",
  "/usr/share/doc/testapp/changelog.gz",
  "/usr/share/icons/hicolor/",
  "/usr/share/icons/hicolor/128x128/",
  "/usr/share/icons/hicolor/16x16/",
  "/usr/share/icons/hicolor/256x256/",
  "/usr/share/icons/hicolor/32x32/",
  "/usr/share/icons/hicolor/48x48/",
  "/usr/share/icons/hicolor/512x512/",
  "/usr/share/icons/hicolor/64x64/",
  "/usr/share/icons/hicolor/128x128/apps/",
  "/usr/share/icons/hicolor/128x128/apps/testapp.png",
  "/usr/share/icons/hicolor/16x16/apps/",
  "/usr/share/icons/hicolor/16x16/apps/testapp.png",
  "/usr/share/icons/hicolor/256x256/apps/",
  "/usr/share/icons/hicolor/256x256/apps/testapp.png",
  "/usr/share/icons/hicolor/32x32/apps/",
  "/usr/share/icons/hicolor/32x32/apps/testapp.png",
  "/usr/share/icons/hicolor/48x48/apps/",
  "/usr/share/icons/hicolor/48x48/apps/testapp.png",
  "/usr/share/icons/hicolor/512x512/apps/",
  "/usr/share/icons/hicolor/512x512/apps/testapp.png",
  "/usr/share/icons/hicolor/64x64/apps/",
  "/usr/share/icons/hicolor/64x64/apps/testapp.png",
]
`;

exports[`mac/win/linux concurrent 8`] = `
{
  "Architecture": "armhf",
  "Depends": "libgtk-3-0, libnotify4, libnss3, libxss1, libxtst6, xdg-utils, libatspi2.0-0, libuuid1, libsecret-1-0",
  "Homepage": "http://foo.example.com",
  "License": "MIT",
  "Maintainer": "Foo Bar <foo@example.com>",
  "Package": "testapp",
  "Priority": "optional",
  "Recommends": "libappindicator3-1",
  "Section": "default",
  "Vendor": "Foo Bar <foo@example.com>",
}
`;

exports[`mac/win/linux concurrent 9`] = `"Test Application (test quite “ #378)"`;

exports[`win concurrent 1`] = `
{
  "win": [
    {
      "file": "TestApp Setup 1.1.0.exe",
      "safeArtifactName": "TestApp-Setup-1.1.0.exe",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "TestApp Setup 1.1.0.exe.blockmap",
      "safeArtifactName": "TestApp-Setup-1.1.0.exe.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;

exports[`win/linux concurrent 1`] = `
{
  "linux": [
    {
      "arch": "armv7l",
      "file": "TestApp-1.1.0-armv7l.AppImage",
      "updateInfo": {
        "blockMapSize": "@blockMapSize",
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "arch": "x64",
      "file": "TestApp-1.1.0.AppImage",
      "updateInfo": {
        "blockMapSize": "@blockMapSize",
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "arch": "x64",
      "file": "TestApp_1.1.0_amd64.deb",
    },
    {
      "arch": "armv7l",
      "file": "TestApp_1.1.0_armv7l.deb",
    },
    {
      "arch": "armv7l",
      "file": "TestApp-1.1.0.armv7l.rpm",
    },
    {
      "arch": "x64",
      "file": "TestApp-1.1.0.x86_64.rpm",
    },
  ],
  "win": [
    {
      "file": "TestApp Setup 1.1.0.exe",
      "safeArtifactName": "TestApp-Setup-1.1.0.exe",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "TestApp Setup 1.1.0.exe.blockmap",
      "safeArtifactName": "TestApp-Setup-1.1.0.exe.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;

exports[`win/linux concurrent 2`] = `
[
  "/",
  "/opt/",
  "/usr/",
  "/opt/TestApp/",
  "/opt/TestApp/chrome-sandbox",
  "/opt/TestApp/chrome_100_percent.pak",
  "/opt/TestApp/chrome_200_percent.pak",
  "/opt/TestApp/chrome_crashpad_handler",
  "/opt/TestApp/icudtl.dat",
  "/opt/TestApp/libEGL.so",
  "/opt/TestApp/libffmpeg.so",
  "/opt/TestApp/libGLESv2.so",
  "/opt/TestApp/libvk_swiftshader.so",
  "/opt/TestApp/libvulkan.so.1",
  "/opt/TestApp/LICENSE.electron.txt",
  "/opt/TestApp/LICENSES.chromium.html",
  "/opt/TestApp/resources.pak",
  "/opt/TestApp/snapshot_blob.bin",
  "/opt/TestApp/testapp",
  "/opt/TestApp/v8_context_snapshot.bin",
  "/opt/TestApp/vk_swiftshader_icd.json",
  "/usr/share/",
  "/opt/TestApp/resources/",
  "/opt/TestApp/resources/app.asar",
  "/opt/TestApp/resources/apparmor-profile",
  "/usr/share/applications/",
  "/usr/share/applications/testapp.desktop",
  "/usr/share/doc/",
  "/usr/share/icons/",
  "/usr/share/doc/testapp/",
  "/usr/share/doc/testapp/changelog.gz",
  "/usr/share/icons/hicolor/",
  "/usr/share/icons/hicolor/128x128/",
  "/usr/share/icons/hicolor/16x16/",
  "/usr/share/icons/hicolor/256x256/",
  "/usr/share/icons/hicolor/32x32/",
  "/usr/share/icons/hicolor/48x48/",
  "/usr/share/icons/hicolor/512x512/",
  "/usr/share/icons/hicolor/64x64/",
  "/usr/share/icons/hicolor/128x128/apps/",
  "/usr/share/icons/hicolor/128x128/apps/testapp.png",
  "/usr/share/icons/hicolor/16x16/apps/",
  "/usr/share/icons/hicolor/16x16/apps/testapp.png",
  "/usr/share/icons/hicolor/256x256/apps/",
  "/usr/share/icons/hicolor/256x256/apps/testapp.png",
  "/usr/share/icons/hicolor/32x32/apps/",
  "/usr/share/icons/hicolor/32x32/apps/testapp.png",
  "/usr/share/icons/hicolor/48x48/apps/",
  "/usr/share/icons/hicolor/48x48/apps/testapp.png",
  "/usr/share/icons/hicolor/512x512/apps/",
  "/usr/share/icons/hicolor/512x512/apps/testapp.png",
  "/usr/share/icons/hicolor/64x64/apps/",
  "/usr/share/icons/hicolor/64x64/apps/testapp.png",
]
`;

exports[`win/linux concurrent 3`] = `
{
  "Architecture": "amd64",
  "Depends": "libgtk-3-0, libnotify4, libnss3, libxss1, libxtst6, xdg-utils, libatspi2.0-0, libuuid1, libsecret-1-0",
  "Homepage": "http://foo.example.com",
  "License": "MIT",
  "Maintainer": "Foo Bar <foo@example.com>",
  "Package": "testapp",
  "Priority": "optional",
  "Recommends": "libappindicator3-1",
  "Section": "default",
  "Vendor": "Foo Bar <foo@example.com>",
}
`;

exports[`win/linux concurrent 4`] = `"Test Application (test quite “ #378)"`;

exports[`win/linux concurrent 5`] = `
[
  "/",
  "/opt/",
  "/usr/",
  "/opt/TestApp/",
  "/opt/TestApp/chrome-sandbox",
  "/opt/TestApp/chrome_100_percent.pak",
  "/opt/TestApp/chrome_200_percent.pak",
  "/opt/TestApp/chrome_crashpad_handler",
  "/opt/TestApp/icudtl.dat",
  "/opt/TestApp/libEGL.so",
  "/opt/TestApp/libffmpeg.so",
  "/opt/TestApp/libGLESv2.so",
  "/opt/TestApp/libvk_swiftshader.so",
  "/opt/TestApp/libvulkan.so.1",
  "/opt/TestApp/LICENSE.electron.txt",
  "/opt/TestApp/LICENSES.chromium.html",
  "/opt/TestApp/resources.pak",
  "/opt/TestApp/snapshot_blob.bin",
  "/opt/TestApp/testapp",
  "/opt/TestApp/v8_context_snapshot.bin",
  "/opt/TestApp/vk_swiftshader_icd.json",
  "/usr/share/",
  "/opt/TestApp/resources/",
  "/opt/TestApp/resources/app.asar",
  "/opt/TestApp/resources/apparmor-profile",
  "/usr/share/applications/",
  "/usr/share/applications/testapp.desktop",
  "/usr/share/doc/",
  "/usr/share/icons/",
  "/usr/share/doc/testapp/",
  "/usr/share/doc/testapp/changelog.gz",
  "/usr/share/icons/hicolor/",
  "/usr/share/icons/hicolor/128x128/",
  "/usr/share/icons/hicolor/16x16/",
  "/usr/share/icons/hicolor/256x256/",
  "/usr/share/icons/hicolor/32x32/",
  "/usr/share/icons/hicolor/48x48/",
  "/usr/share/icons/hicolor/512x512/",
  "/usr/share/icons/hicolor/64x64/",
  "/usr/share/icons/hicolor/128x128/apps/",
  "/usr/share/icons/hicolor/128x128/apps/testapp.png",
  "/usr/share/icons/hicolor/16x16/apps/",
  "/usr/share/icons/hicolor/16x16/apps/testapp.png",
  "/usr/share/icons/hicolor/256x256/apps/",
  "/usr/share/icons/hicolor/256x256/apps/testapp.png",
  "/usr/share/icons/hicolor/32x32/apps/",
  "/usr/share/icons/hicolor/32x32/apps/testapp.png",
  "/usr/share/icons/hicolor/48x48/apps/",
  "/usr/share/icons/hicolor/48x48/apps/testapp.png",
  "/usr/share/icons/hicolor/512x512/apps/",
  "/usr/share/icons/hicolor/512x512/apps/testapp.png",
  "/usr/share/icons/hicolor/64x64/apps/",
  "/usr/share/icons/hicolor/64x64/apps/testapp.png",
]
`;

exports[`win/linux concurrent 6`] = `
{
  "Architecture": "armhf",
  "Depends": "libgtk-3-0, libnotify4, libnss3, libxss1, libxtst6, xdg-utils, libatspi2.0-0, libuuid1, libsecret-1-0",
  "Homepage": "http://foo.example.com",
  "License": "MIT",
  "Maintainer": "Foo Bar <foo@example.com>",
  "Package": "testapp",
  "Priority": "optional",
  "Recommends": "libappindicator3-1",
  "Section": "default",
  "Vendor": "Foo Bar <foo@example.com>",
}
`;

exports[`win/linux concurrent 7`] = `"Test Application (test quite “ #378)"`;
